--- a/FrogPay.Repository/FrogPay.Repository.csproj
+++ b/FrogPay.Repository/FrogPay.Repository.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -6,11 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
+  </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FrogPay.Core\FrogPay.Core.csproj" />
     <ProjectReference Include="..\FrogPay.Domain\FrogPay.Domain.csproj" />
-    <ProjectReference Include="..\FrogPay.Repository\FrogPay.Repository.csproj" />
   </ItemGroup>
 
 </Project>
