--- a/FrogPay.Tests/FrogPay.Tests.csproj
+++ b/FrogPay.Tests/FrogPay.Tests.csproj
@@ -42,7 +42,7 @@
     <ProjectReference Include="..\FrogPay.API\FrogPay.API.csproj" />
     <ProjectReference Include="..\FrogPay.Core\FrogPay.Core.csproj" />
     <ProjectReference Include="..\FrogPay.Domain\FrogPay.Domain.csproj" />
-    <ProjectReference Include="..\FrogPay.Infra\FrogPay.Infra.csproj" />
+    <ProjectReference Include="..\FrogPay.Repository\FrogPay.Repository.csproj" />
     <ProjectReference Include="..\FrogPay.Services\FrogPay.Services.csproj" />
   </ItemGroup>
 
