--- a/FrogPay.API/appsettings.json
+++ b/FrogPay.API/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "ConnectionStrings": {
+    "ManagerAPISqlServer": "Host=localhost;Port=5432;Database=DBFrogPay;Username=postgres;Password=dunha"
+  },
+  "Jwt": {
+    "Key": "dXzU3f7hG9mJc5kLq9vYz2wB8nP1sT3eW9xC7dQ4aR5vL1oM6z", // Chave secreta para autorização - Melhor colocar via SecretKey
+    "Issuer": "FrogPayAuthServer",
+    "Audience": "FrogPayUsers",
+    "DurationInMinutes": 5
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
