Patronização Create e Update

--- a/FrogPay.Services/FrogPay.Services.csproj
+++ b/FrogPay.Services/FrogPay.Services.csproj
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <ProjectReference Include="..\FrogPay.Core\FrogPay.Core.csproj" />
