--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,5 @@ services:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
-
-volumes:
-  postgres-data:
+      - ./Script_Tabelas_Banco_Dados.PostGree.sql
+  
