--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,31 @@
 version: '3.8'
 
 services:
-  db:
-    image: postgres:latest
+  postgres-db:
+    image: postgres
     environment:
-      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: dunha
       POSTGRES_DB: DBFrogPay
     ports:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
-      - ./Script_Tabelas_Banco_Dados.PostGree.sql
-  
+
+  webapp:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      - postgres-db
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__ManagerAPIPostgre=Host=postgres-db;Port=5432;Database=DBFrogPay;Username=postgres;Password=dunha
+    ports:
+      - "5000:80"
+      - "5001:443"
+    volumes:
+      - ./logs:/app/logs
+
+volumes:
+  postgres-data:
+        
